--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,24 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "CommonJS",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noUnusedParameters": false,
+    "experimentalDecorators": true,
+    "noUnusedLocals": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
     "sourceMap": true,
-    "declaration": true,
     "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable"
+      "es2015"
     ],
     "rootDir": "src",
     "outDir": "build"
   },
   "include": [
-    "src/*.ts",
-    "src/Request.ts"
+    "src/*.ts"
   ],
   "exclude": [
     "node_modules",
