--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "0-Deps, simple and fast context library for NodeJS",
   "type": "module",
-  "main": "build/index.js",
+  "main": "build/index.cjs",
   "types": "build/index.d.ts",
   "files": [
     "build",
