--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   },
   "homepage": "https://github.com/3axap4eHko/conode#readme",
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.27",
-    "jest": "27",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.3",
+    "typescript": "^4.7.2"
   }
 }
