--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "moduleResolution": "node",
+    "strict": true,
+    "target": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "declaration": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noUnusedParameters": false,
     "experimentalDecorators": true,
-    "noUnusedLocals": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
     "sourceMap": true,
-    "lib": [
-      "es2015"
-    ],
+    "lib": ["ESNext", "DOM"],
     "rootDir": "src",
     "outDir": "build"
   },
   "include": [
-    "src/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
+    "**/__tests__",
     "node_modules",
-    "src/**/__tests__",
-    "src/**/__fixtures__",
-    "src/**/__mocks__"
+    "**/*.tmp.ts"
   ]
 }
