--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "module": "build/index.js",
   "sideEffects": false,
   "scripts": {
-    "convert-cjs": "node scripts/convert-cjs.js",
-    "build": "rm -rf build && yarn build:cjs && yarn build:mjs",
-    "build:cjs": "tsc -p tsconfig.cjs.json && yarn convert-cjs",
-    "build:mjs": "tsc -p tsconfig.mjs.json --declaration",
+    "build": "rm -rf build && inop src build -i __tests__ -i *.tmp.ts && tsc --declaration --emitDeclarationOnly",
     "test": "jest"
   },
   "repository": {
@@ -39,10 +36,12 @@
   },
   "homepage": "https://github.com/3axap4eHko/conode#readme",
   "devDependencies": {
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.35",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.3",
-    "typescript": "^4.7.2"
-  }
+    "@swc/jest": "^0.2.38",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.18",
+    "inop": "^0.7.8",
+    "jest": "^29.7.0",
+    "typescript": "^5.8.3"
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
