adds import tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,4 @@ jobs:
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
           test: |
             pnpm test
+            pnpm test:build
