--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -21,6 +21,7 @@ jobs:
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
           test: |
             pnpm test
+            pnpm test:build
 
   test:
     runs-on: ubuntu-latest
