--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "rm -rf build && inop src build -i __tests__ -i *.tmp.ts && tsc --declaration --emitDeclarationOnly",
-    "test": "jest"
+    "test": "jest",
+    "test:build": "node src/__tests__/index.cjs && node src/__tests__/index.mjs"
   },
   "repository": {
     "type": "git",
